# web-server

./: Cargo.toml
files/: .index.html.swp  index.html
src/: lib.rs  main.rs
static/: app.js
