[package]
name = "piserver"
version = "0.1.0"
authors = ["Dave Gill <david.g.h.gill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "piserver"

[dependencies]
actix-files = "0.5.0"
actix-web = "3"

[dev-dependencies]
reqwest = "0.11.0"
